# blackbean

./: .gitignore  README.md
nuanfeng/: README.md  pyproject.toml
nuanfeng/doc/: index.rst  tutorial_function_model.rst  user_manue_function_model.rst
nuanfeng/example/: FSM.rst  nfexample.py  test_msk_modulation.py
nuanfeng/nuanfeng/: __init__.py  error.py  func_model.py  nfcircuit.py  sys_model.py
nuanfeng/src/nuanfeng/: __init__.py  nfmodel.py  nfparser.py  nfsv.py  util.py
nuanfeng/tests/: test_FSM.py
nuanfeng/tmp/: a.sv
xiaoxiao/: README.md  setup.py
xiaoxiao/doc/: index.rst  user_manual.rst  user_manule.rst
xiaoxiao/xiaoxiao/: __init__.py  a  action.py  circuit.py  config.py  graph.py  logic.py  project.py  signal.py  symbol.py  text.py  view.py  window.py  xiaoxiao.py
xiaoxiao/xiaoxiao/bak/: __init__.py  circuit.py  common.py  component.py  graph.py  inner_device.py  module.py  text.py  view.py
xiaoxiao/xiaoxiao/example/: core_config.ini  core_signals.ini
