[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nuanfeng"
version = "0.0.1"
authors = [
  { name="Hayes", email="lhuaye@163.com" },
]
description = "Hardware Architecture Model Language"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/blackbean/nuanfeng"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
